# NoSignal

./: .gitignore  CMakeLists.txt  readme.md  test.sh  vcpkg.json
src/: client_main.cpp  server_main.cpp
src/cppdoc/: cppdoc.cpp  cppdoc.hpp  cppdoc.hpp.md  readme.md
src/filemanager/: filemanager.cpp  filemanager.hpp
src/i18n/: i18n.cpp  i18n.hpp  utiles.hpp
src/log/: logManager.cpp  logManager.hpp  logger.cpp  logger.hpp
src/network/: message.cpp  message.hpp  message.inl  networkmanager.hpp  readme.md  utiles.hpp
src/uuid/: uuid.cpp  uuid.hpp
test/: test_network.cpp  test_uuid.cpp
